--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -87,7 +87,7 @@ serde_json = { workspace = true }
 substrate-wasm-builder = { workspace = true, optional = true }
 
 [features]
-default = ["std"]
+default = ["std", "with-rocksdb-weights"]
 with-rocksdb-weights = []
 with-paritydb-weights = []
 std = [
