--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -32,18 +32,12 @@ runs:
       uses: docker/login-action@v3
       with:
         registry: ${{ env.ECR_REGISTRY_SECRET }}
-    - name: Download partner-chains-node artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: partner-chains-node-artifact
-        path: dev/local-environment/configurations/pc-contracts-cli/overrides/
-    - name: Deploy local environment with overrides
+    - name: Deploy local environment
       run: |
-        mv dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-node-artifact dev/local-environment/configurations/pc-contracts-cli/overrides/partner-chains-node
         mkdir -p dev/local-environment/configurations/tests/e2e-tests
         cp -r E2E-tests/* dev/local-environment/configurations/tests/e2e-tests
         cd dev/local-environment
-        bash setup.sh --non-interactive --overrides --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests
+        bash setup.sh --non-interactive --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests
         docker compose up -d
         cd ../../
       shell: bash
