--- a/dev/envs/staging-preview/.envrc
+++ b/dev/envs/staging-preview/.envrc
@@ -36,4 +36,5 @@ export MC__FIRST_SLOT_NUMBER=0
 
 # When true, node will use the mock implementation of main chain follower. Overrides USE_INTERNAL_MAIN_CHAIN_FOLLOWER if true.
 export USE_MAIN_CHAIN_FOLLOWER_MOCK=false
-export MAIN_CHAIN_FOLLOWER_MOCK_REGISTRATIONS_FILE=res/bb-mock/default-registrations.json
+# This one is redundant when USE_MAIN_CHAIN_FOLLOWER_MOCK is absent of 'false'.
+#export MAIN_CHAIN_FOLLOWER_MOCK_REGISTRATIONS_FILE=res/bb-mock/default-registrations.json
