--- a/.github/actions/release/create-draft-release/action.yml
+++ b/.github/actions/release/create-draft-release/action.yml
@@ -71,6 +71,12 @@ runs:
         echo "release_notes=$release_notes" >> $GITHUB_OUTPUT
       shell: bash
 
+    - name: Checkout specific SHA
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ inputs.sha }}
+        path: release-sha
+
     - name: Create draft release
       id: create_release
       if: ${{ steps.check_release.outputs.release_exists == 'false' }}
@@ -78,7 +84,7 @@ runs:
       with:
         tag_name: ${{ inputs.tag }}
         name: ${{ inputs.tag }}
-        body_path: release-notes.md
+        body_path: release-sha/release-notes.md
         draft: true
         prerelease: true
         generate_release_notes: false
