--- a/.github/actions/release/create-draft-release/action.yml
+++ b/.github/actions/release/create-draft-release/action.yml
@@ -77,6 +77,12 @@ runs:
         ref: ${{ inputs.sha }}
         path: release-sha
 
+    - name: Process release notes
+      shell: bash
+      run: |
+        # Replace [VERSION] with release version
+        sed "s/\[VERSION\]/${{ inputs.tag }}/g" release-sha/release-notes-template.md > release-notes.md
+
     - name: Create draft release
       id: create_release
       if: ${{ steps.check_release.outputs.release_exists == 'false' }}
@@ -84,7 +90,7 @@ runs:
       with:
         tag_name: ${{ inputs.tag }}
         name: ${{ inputs.tag }}
-        body_path: release-sha/release-notes.md
+        body_path: release-notes.md
         draft: true
         prerelease: true
         generate_release_notes: false
