--- a/.github/actions/release/create-draft-release/action.yml
+++ b/.github/actions/release/create-draft-release/action.yml
@@ -89,7 +89,7 @@ runs:
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ inputs.tag }}
-        name: ${{ inputs.tag }}
+        name: "Partner Chains Node ${{ inputs.tag }}"
         body_path: release-notes.md
         draft: true
         prerelease: true
