--- a/toolkit/cli/commands/Cargo.toml
+++ b/toolkit/cli/commands/Cargo.toml
@@ -9,19 +9,23 @@ license = "Apache-2.0"
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
-ed25519 = { workspace = true, features = ["alloc"]}
-ed25519-zebra  = { workspace = true}
+ed25519 = { workspace = true, features = ["alloc"] }
+ed25519-zebra = { workspace = true }
 hex = { workspace = true }
 hex-literal = { workspace = true }
 plutus = { workspace = true, default-features = true }
 plutus-datum-derive = { workspace = true, default-features = true }
 secp256k1 = { workspace = true, features = ["std", "global-context"] }
-sidechain-domain = { workspace = true, default-features = true }
+sidechain-domain = { workspace = true, default-features = true, features = [
+    "std",
+] }
 sp-io = { workspace = true, default-features = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+partner-chains-smart-contracts-commands = { workspace = true }
+sp-address-associations = { workspace = true }
+parity-scale-codec = { workspace = true }
 
 [dev-dependencies]
 assert_cmd = { workspace = true }
-
