--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -15,7 +15,9 @@ log = { workspace = true }
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 derive-new = { workspace = true }
-serde_json = { workspace = true, default-features = false, features = ["alloc"] }
+serde_json = { workspace = true, default-features = false, features = [
+	"alloc",
+] }
 
 pallet-aura = { workspace = true }
 pallet-balances = { workspace = true }
@@ -73,6 +75,8 @@ session-manager = { workspace = true }
 pallet-native-token-management = { workspace = true }
 sp-native-token-management = { workspace = true, features = ["serde"] }
 pallet-session-runtime-stub = { workspace = true, default-features = false }
+sp-address-associations = { workspace = true }
+pallet-address-associations = { workspace = true }
 
 [dev-dependencies]
 sp-io = { workspace = true }
@@ -117,6 +121,7 @@ std = [
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
+	"pallet-address-associations/std",
 	"session-manager/std",
 	"sp-api/std",
 	"sp-block-builder/std",
@@ -145,6 +150,7 @@ std = [
 	"pallet-native-token-management/std",
 	"sp-native-token-management/std",
 	"pallet-session-runtime-stub/std",
+	"sp-address-associations/std",
 ]
 
 runtime-benchmarks = [
@@ -158,6 +164,7 @@ runtime-benchmarks = [
 	"pallet-timestamp/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 	"pallet-native-token-management/runtime-benchmarks",
+	"pallet-address-associations/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-try-runtime/try-runtime",
