--- a/toolkit/primitives/domain/Cargo.toml
+++ b/toolkit/primitives/domain/Cargo.toml
@@ -24,20 +24,25 @@ lazy_static = { workspace = true }
 blake2b_simd = { workspace = true }
 figment = { workspace = true, optional = true }
 thiserror = { workspace = true, optional = true }
+bech32 = { workspace = true }
+sp-io = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
+hex-literal = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
 	"serde/std",
 	"sp-core/std",
+	"sp-io/std",
 	"parity-scale-codec/std",
 	"scale-info/std",
 	"num-bigint/std",
 	"figment",
 	"thiserror",
+	"bech32/std",
 ]
 serde = [
 	"dep:serde",
