--- a/toolkit/pallets/native-token-management/Cargo.toml
+++ b/toolkit/pallets/native-token-management/Cargo.toml
@@ -6,6 +6,7 @@ description = "Pallet responsible for handling changes to the illiquid supply of
 license = "Apache-2.0"
 
 [dependencies]
+frame-benchmarking = { workspace = true, optional = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
 log = { workspace = true }
@@ -20,12 +21,18 @@ sp-io = { workspace = true }
 [features]
 default = ["std"]
 std = [
+    "frame-benchmarking/std",
     "frame-support/std",
     "frame-system/std",
     "log/std",
     "scale-info/std",
     "parity-scale-codec/std",
     "scale-info/std",
-    "sp-native-token-management/std"
+    "sp-native-token-management/std",
+]
+runtime-benchmarks = [
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
 ]
 mock = []
