--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
           name: chain-specs
           path: |
             ./devnet_chain_spec.json
+            ./ci_preview_chain_spec.json
             ./staging_preview_chain_spec.json
             ./staging_preprod_chain_spec.json
 
