--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,12 @@ permissions:
   contents: write
 
 jobs:
-  build:
+
+#################################################################################################################
+# Pre merge workflow
+#################################################################################################################
+
+  build-pre-merge:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && (github.event.pull_request.merged || github.event.action != 'closed'))
     outputs:
@@ -50,7 +55,7 @@ jobs:
           EARTHLY_OUTPUT: true
           EARTHLY_PUSH: true
         run: |
-          earthly -P +ci --image=${{ secrets.ECR_REGISTRY_SECRET }}/substrate-node
+          earthly -P +ci --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
@@ -68,7 +73,7 @@ jobs:
 
   local-environment-tests:
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
-    needs: build
+    needs: build-pre-merge
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -80,8 +85,8 @@ jobs:
         uses: ./.github/actions/tests/local-environment-tests
         with:
           tag: CI
-          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build.outputs.sha }}
-          sha: ${{ needs.build.outputs.sha }}
+          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-pre-merge.outputs.sha }}
+          sha: ${{ needs.build-pre-merge.outputs.sha }}
           tests: premerge
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
@@ -121,75 +126,8 @@ jobs:
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
-  #deploy-argocd:
-  #  if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
-  #  needs: build
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v4
-  #      with:
-  #        fetch-depth: 0
-  #        ref: ${{ github.event.pull_request.head.sha || github.sha }}
-  #    - name: Deploy ArgoCD Node
-  #      uses: ./.github/actions/deploy/argocd/deploy-argocd
-  #      with:
-  #        sha: ${{ needs.build.outputs.sha }}
-  #      env:
-  #        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-  #        kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-  #        K8S_SERVER: ${{ secrets.K8S_SERVER }}
-  #        K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-
-  #argocd-tests:
-  #  continue-on-error: true
-  #  if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
-  #  needs: [build, deploy-argocd]
-  #  runs-on: eks
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v4
-  #      with:
-  #        fetch-depth: 0
-  #        ref: ${{ github.event.pull_request.head.sha || github.sha }}
-  #    - name: Run Tests
-  #      uses: ./.github/actions/tests/argocd-tests
-  #      with:
-  #        sha: ${{ needs.build.outputs.sha }}
-  #        node-host: sha-${{ needs.build.outputs.sha }}-service.integration-testing.svc.cluster.local
-  #        node-port: 9933
-  #        ssh_key_binary_host: ${{ secrets.SSH_KEY_BINARY_HOST }}
-  #      env:
-  #        AWS_ROLE_ARN_: ${{ secrets.AWS_ROLE_ARN_ }}
-  #        SSH_KEY_BINARY_HOST: ${{ secrets.SSH_KEY_BINARY_HOST }}
-  #        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-  #        JIRA_URL: ${{ secrets.JIRA_URL }}
-  #        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-  #        kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-  #        K8S_SERVER: ${{ secrets.K8S_SERVER }}
-  #        K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-
-  #teardown-argocd:
-  #  needs: [build, argocd-tests]
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v4
-  #      with:
-  #        fetch-depth: 0
-  #        ref: ${{ github.event.pull_request.head.sha || github.sha }}
-  #    - name: Teardown ArgoCD Environment
-  #      uses: ./.github/actions/deploy/argocd/teardown-argocd
-  #      with:
-  #        sha: ${{ needs.build.outputs.sha }}
-  #      env:
-  #        ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-  #        kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-  #        K8S_SERVER: ${{ secrets.K8S_SERVER }}
-  #        K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-
   devshell-tests:
-    needs: build
+    needs: build-pre-merge
     strategy:
       matrix:
         os: [nixos, macos]
@@ -221,12 +159,12 @@ jobs:
 
   pre-merge-checks-complete:
     if: ${{ always() && (github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)) }}
-    needs: [build, local-environment-tests, devshell-tests]
+    needs: [build-pre-merge, local-environment-tests, devshell-tests]
     runs-on: ubuntu-latest
     steps:
       - name: Check if any needed job failed
         run: |
-          if [[ "${{ needs.build.result }}" != "success" ||
+          if [[ "${{ needs.build-pre-merge.result }}" != "success" ||
                 "${{ needs.local-environment-tests.result }}" != "success" ||
                 "${{ needs.devshell-tests.result }}" != "success" ]]; then
             echo "One or more needed jobs failed."
@@ -235,20 +173,74 @@ jobs:
             echo "All needed jobs passed."
           fi
 
+#################################################################################################################
+# Post merge workflow
+#################################################################################################################
+
+  build-post-merge:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+    outputs:
+      sha: ${{ steps.get_sha.outputs.sha }}
+    steps:
+      - name: Checkout master
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: master
+      - name: Get current commit SHA
+        id: get_sha
+        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - name: Setup Earthly
+        uses: ./.github/earthly-setup
+        with:
+          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+          config_tar: ${{ secrets.EARTHLY_TAR }}
+      - name: Acquire AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+          aws-region: ${{ env.AWS_REGION }}
+      - name: Login to container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.ECR_REGISTRY_SECRET }}
+      - name: Build and Artifacts and Push Image
+        env:
+          EARTHLY_CI: true
+          EARTHLY_OUTPUT: true
+          EARTHLY_PUSH: true
+        run: |
+          earthly -P +ci --image=${{ secrets.ECR_REGISTRY_SECRET }}/substrate-node
+      - name: Upload partner-chains-node artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: partner-chains-node-artifact
+          path: partner-chains-node-artifact
+      - name: Upload chain spec artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: chain-specs
+          path: |
+            ./devnet_chain_spec.json
+            ./ci_preview_chain_spec.json
+            ./staging_preview_chain_spec.json
+            ./staging_preprod_chain_spec.json
+
   upload-chain-specs:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
-    needs: build
+    needs: build-post-merge
     runs-on: eks
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          ref: master
       - name: Upload chain spec artifacts to Kubernetes
         uses: ./.github/actions/deploy/upload-chain-specs
         with:
-          sha: ${{ needs.build.outputs.sha }}
+          sha: ${{ needs.build-post-merge.outputs.sha }}
         env:
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
           K8S_SERVER: ${{ secrets.K8S_SERVER }}
@@ -256,14 +248,14 @@ jobs:
 
   deploy-rustdoc:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
-    needs: build
+    needs: build-post-merge
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          ref: master
       - name: Deploy Rust Docs
         uses: ./.github/actions/deploy/deploy-rustdoc
         with:
@@ -274,20 +266,20 @@ jobs:
 
   local-environment-tests-post-merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
-    needs: build
+    needs: build-post-merge
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.merge_commit_sha || github.sha }}
+          ref: master
       - name: Deploy and test against local environment
         uses: ./.github/actions/tests/local-environment-tests
         with:
           tag: CI
-          image: ${{ secrets.ECR_REGISTRY_SECRET }}/substrate-node:${{ needs.build.outputs.sha }}
-          sha: ${{ needs.build.outputs.sha }}
+          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-post-merge.outputs.sha }}
+          sha: ${{ needs.build-post-merge.outputs.sha }}
           tests: postmerge
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
@@ -307,7 +299,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.merge_commit_sha || github.sha }}
+          ref: master
       - name: Download test report
         uses: actions/download-artifact@v4
         with:
@@ -329,7 +321,7 @@ jobs:
 
   deploy-ci-preview:
     needs:
-      - build
+      - build-post-merge
       - local-environment-tests-post-merge-alert
     permissions:
       id-token: write
@@ -343,8 +335,8 @@ jobs:
       - name: Deploy ci-preview
         uses: ./.github/actions/deploy/deploy-ci-preview
         with:
-          image:  ${{ secrets.ECR_REGISTRY_SECRET }}/substrate-node:${{ needs.build.outputs.sha }}
-          sha: ${{ needs.build.outputs.sha }}
+          image:  ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-post-merge.outputs.sha }}
+          sha: ${{ needs.build-post-merge.outputs.sha }}
           no-wipe: true
         env:
           AWS_REGION: "eu-central-1"
@@ -358,12 +350,13 @@ jobs:
 
   post-merge-actions-complete:
     if: ${{ always() && (github.event_name == 'pull_request' && github.event.pull_request.merged == true) }}
-    needs: [deploy-rustdoc, upload-chain-specs, local-environment-tests-post-merge, deploy-ci-preview]
+    needs: [build-post-merge, deploy-rustdoc, upload-chain-specs, local-environment-tests-post-merge, deploy-ci-preview]
     runs-on: ubuntu-latest
     steps:
       - name: Check if any needed job failed
         run: |
           if [[ "${{ needs.deploy-rustdoc.result }}" != "success" ||
+                "${{ needs.build-post-merge.result }}" != "success" ||
                 "${{ needs.upload-chain-specs.result }}" != "success" ||
                 "${{ needs.local-environment-tests-post-merge.result }}" != "success" ]]
                 "${{ needs.deploy-ci-preview.result }}" != "success" ]]; then
