feat: upload to s3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
 # Pre merge workflow
 #################################################################################################################
 
-  build-pre-merge:
+  build-linux-pre-merge:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
     outputs:
@@ -73,7 +73,7 @@ jobs:
 
   local-environment-tests:
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
-    needs: build-pre-merge
+    needs: build-linux-pre-merge
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -85,8 +85,8 @@ jobs:
         uses: ./.github/actions/tests/local-environment-tests
         with:
           tag: CI
-          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-pre-merge.outputs.sha }}
-          sha: ${{ needs.build-pre-merge.outputs.sha }}
+          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-linux-pre-merge.outputs.sha }}
+          sha: ${{ needs.build-linux-pre-merge.outputs.sha }}
           tests: premerge
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
@@ -127,7 +127,7 @@ jobs:
         shell: bash
 
   devshell-tests:
-    needs: build-pre-merge
+    needs: build-linux-pre-merge
     strategy:
       matrix:
         os: [nixos, macos]
@@ -159,12 +159,12 @@ jobs:
 
   pre-merge-checks-complete:
     if: ${{ always() && (github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)) }}
-    needs: [build-pre-merge, local-environment-tests, devshell-tests]
+    needs: [build-linux-pre-merge, local-environment-tests, devshell-tests]
     runs-on: ubuntu-latest
     steps:
       - name: Check if any needed job failed
         run: |
-          if [[ "${{ needs.build-pre-merge.result }}" != "success" ||
+          if [[ "${{ needs.build-linux-pre-merge.result }}" != "success" ||
                 "${{ needs.local-environment-tests.result }}" != "success" ||
                 "${{ needs.devshell-tests.result }}" != "success" ]]; then
             echo "One or more needed jobs failed."
@@ -177,7 +177,7 @@ jobs:
 # Post merge workflow
 #################################################################################################################
 
-  build-post-merge:
+  build-linux-post-merge:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     outputs:
@@ -227,9 +227,81 @@ jobs:
             ./staging_preview_chain_spec.json
             ./staging_preprod_chain_spec.json
 
+  build-macos-x86_64:
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+    permissions:
+      id-token: write
+      contents: write
+    runs-on: macos-latest
+    steps:
+      - name: Checkout master
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: master
+      - name: Get current commit SHA 
+        id: get_sha
+        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - name: Build and Upload for macOS x86_64
+        uses: ./.github/actions/artifacts/build-pc-artifacts
+        with:
+          sha: ${{ steps.get_sha.outputs.sha }}
+          tag: ${{ steps.get_sha.outputs.sha }}
+          os: macos-x86_64
+
+  build-macos-arm64:
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+    permissions:
+      id-token: write
+      contents: write
+    runs-on: macos-latest
+    steps:
+      - name: Checkout master
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: master
+      - name: Get current commit SHA 
+        id: get_sha
+        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - name: Build and Upload for macOS arm64
+        uses: ./.github/actions/artifacts/build-pc-artifacts
+        with:
+          sha: ${{ steps.get_sha.outputs.sha }}
+          tag: ${{ steps.get_sha.outputs.sha }}
+          os: macos-arm64
+
+  upload-to-s3:
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+    needs:
+      - build-linux-post-merge
+      - build-macos-x86_64
+      - build-macos-arm64
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
+    steps:
+      - name: Checkout master
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: master
+      - name: Get current commit SHA 
+        id: get_sha
+        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - name: Upload Artifacts to S3
+        uses: ./.github/actions/artifacts/upload-to-s3
+        with:
+          sha: ${{ steps.get_sha.outputs.sha }}
+          bucket-name: ${{ secrets.AWS_CD_ARTIFACT_S3_BUCKET }}
+        env:
+          AWS_REGION: ${{ env.AWS_REGION }}
+          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_S3_ROLE_ARN_SECRET }}
+
   upload-chain-specs:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
-    needs: build-post-merge
+    needs: build-linux-post-merge
     runs-on: eks
     steps:
       - name: Checkout
@@ -240,7 +312,7 @@ jobs:
       - name: Upload chain spec artifacts to Kubernetes
         uses: ./.github/actions/deploy/upload-chain-specs
         with:
-          sha: ${{ needs.build-post-merge.outputs.sha }}
+          sha: ${{ needs.build-linux-post-merge.outputs.sha }}
         env:
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
           K8S_SERVER: ${{ secrets.K8S_SERVER }}
@@ -248,7 +320,7 @@ jobs:
 
   deploy-rustdoc:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
-    needs: build-post-merge
+    needs: build-linux-post-merge
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -266,7 +338,7 @@ jobs:
 
   local-environment-tests-post-merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
-    needs: build-post-merge
+    needs: build-linux-post-merge
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -278,8 +350,8 @@ jobs:
         uses: ./.github/actions/tests/local-environment-tests
         with:
           tag: CI
-          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-post-merge.outputs.sha }}
-          sha: ${{ needs.build-post-merge.outputs.sha }}
+          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-linux-post-merge.outputs.sha }}
+          sha: ${{ needs.build-linux-post-merge.outputs.sha }}
           tests: postmerge
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
@@ -321,7 +393,7 @@ jobs:
 
   deploy-ci-preview:
     needs:
-      - build-post-merge
+      - build-linux-post-merge
       - local-environment-tests-post-merge-alert
     permissions:
       id-token: write
@@ -335,8 +407,8 @@ jobs:
       - name: Deploy ci-preview
         uses: ./.github/actions/deploy/deploy-ci-preview
         with:
-          image:  ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-post-merge.outputs.sha }}
-          sha: ${{ needs.build-post-merge.outputs.sha }}
+          image:  ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-linux-post-merge.outputs.sha }}
+          sha: ${{ needs.build-linux-post-merge.outputs.sha }}
           no-wipe: true
         env:
           AWS_REGION: "eu-central-1"
@@ -350,13 +422,13 @@ jobs:
 
   post-merge-actions-complete:
     if: ${{ always() && (github.event_name == 'pull_request' && github.event.pull_request.merged == true) }}
-    needs: [build-post-merge, deploy-rustdoc, upload-chain-specs, local-environment-tests-post-merge, deploy-ci-preview]
+    needs: [build-linux-post-merge, deploy-rustdoc, upload-chain-specs, local-environment-tests-post-merge, deploy-ci-preview]
     runs-on: ubuntu-latest
     steps:
       - name: Check if any needed job failed
         run: |
           if [[ "${{ needs.deploy-rustdoc.result }}" != "success" ||
-                "${{ needs.build-post-merge.result }}" != "success" ||
+                "${{ needs.build-linux-post-merge.result }}" != "success" ||
                 "${{ needs.upload-chain-specs.result }}" != "success" ||
                 "${{ needs.local-environment-tests-post-merge.result }}" != "success" ]]
                 "${{ needs.deploy-ci-preview.result }}" != "success" ]]; then
