--- a/.github/workflows/ci/ci.yml
+++ b/.github/workflows/ci/ci.yml
@@ -17,9 +17,7 @@ permissions:
 
 jobs:
 
-#################################################################################################################
-# Pre merge workflow
-#################################################################################################################
+### Pre merge workflow ###############################################################################################################
 
   build-linux-pre-merge:
     runs-on: ubuntu-latest
@@ -173,9 +171,7 @@ jobs:
             echo "All needed jobs passed."
           fi
 
-#################################################################################################################
-# Post merge workflow
-#################################################################################################################
+### Post merge workflow ###############################################################################################################
 
   build-linux-post-merge:
     runs-on: ubuntu-latest
